@@ -50,6 +50,16 @@ slim 1 appearance zhangdb {
 	    default 0.0
 	}
 	
+	parameter float dofmn {
+		label {Depth of Field Min}
+	    default 1000
+	}
+	
+	parameter float dofmx {
+		label {Depth of Field Max}
+	    default 4000
+	}
+	
 	parameter string sdepth {
 		label {Depth Map}
 		subtype file
