@@ -1,3 +1,7 @@
+26/08/09
+
+Hair DSO simplified by depth of field and motion.
+
 25/08/09
 
 Save real depth value to EXR images
